--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,6 +270,7 @@ add_subdirectory( plotjuggler_plugins/DataStreamMQTT )
 add_subdirectory( plotjuggler_plugins/DataStreamZMQ )
 
 add_subdirectory( plotjuggler_plugins/StatePublisherCSV )
+add_subdirectory( plotjuggler_plugins/StatePublisherZMQ )
 add_subdirectory( plotjuggler_plugins/VideoViewer )
 
 add_subdirectory( plotjuggler_plugins/ToolboxQuaternion )
